--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
     <div id="portfolio" class="py-20 px-8">
         <h2 class="text-4xl font-medium text-center mb-10">My Work</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <a href="../src/My Work/ex1menu.html" class="bg-gray-100 rounded-xl p-6 block">
+            <a href="../My_Work/ex1menu.html" class="bg-gray-100 rounded-xl p-6 block">
                 <img src="https://d3h1lg3ksw6i6b.cloudfront.net/media/image/2023/04/24/5608757681874e1ea5df1aa41d5b2e3d_How_To_Make_Tom_Yam_Kung_The_Epitome_Of_Delicious_And_Nutritious_Thai_Cuisine3.jpg" alt="menu" class="rounded-lg mb-4">
                 <h3 class="text-xl font-medium">MENU HTML</h3>
                 <p class="text-gray-500 mt-2">เขียนเว็บด้วย HTML</p>
             </a>
-            <a href="../src/My Work/ex2Form.html" class="bg-gray-100 rounded-xl p-6 block">
+            <a href="../My_Work/ex2Form.html" class="bg-gray-100 rounded-xl p-6 block">
                 <img src="https://st3.depositphotos.com/3591429/12864/i/950/depositphotos_128642652-stock-photo-people-filling-application-form.jpg" alt="form" class="rounded-lg mb-4">
                 <h3 class="text-xl font-medium">FORM HTML + CSS</h3>
                 <p class="text-gray-500 mt-2">การออกแบบฟรอมด้วย CSS</p>
             </a>
-            <a href="../src/My Work/ex3Box_Model.html" class="bg-gray-100 rounded-xl p-6 block">
+            <a href="../My_Work/ex3Box_Model.html" class="bg-gray-100 rounded-xl p-6 block">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Boxmodell-detail.png" alt="Box model" class="rounded-lg mb-4">
                 <h3 class="text-xl font-medium">Box Model</h3>
                 <p class="text-gray-500 mt-2">การออกแบบเลเอาท์ด้วย Box Model</p>
             </a>
-            <a href="../src/My Work/ex4menubuty.html" class="bg-gray-100 rounded-xl p-6 block">
+            <a href="../My_Work/ex4menubuty.html" class="bg-gray-100 rounded-xl p-6 block">
                 <img src="https://d3h1lg3ksw6i6b.cloudfront.net/media/image/2023/04/24/5608757681874e1ea5df1aa41d5b2e3d_How_To_Make_Tom_Yam_Kung_The_Epitome_Of_Delicious_And_Nutritious_Thai_Cuisine3.jpg" alt="Box model" class="rounded-lg mb-4">
                 <h3 class="text-xl font-medium">Data Analysis</h3>
                 <p class="text-gray-500 mt-2">Turning data into insights.</p>
