--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; }
+        #home {
+            background: url('path/to/your/background-image.jpg') no-repeat center center;
+            background-size: cover;
+            height: 400px; /* Adjust the height to match the background image height */
+        }
     </style>
 </head>
 <body class="bg-white text-black font-light">
@@ -22,7 +27,7 @@
     </div>
 
     <!-- Hero Section -->
-    <section id="home" class="h-screen flex flex-col justify-center items-center text-center px-4">
+    <section id="home" class="flex flex-col justify-center items-center text-center px-4">
         <img src="https://scontent.furt3-1.fna.fbcdn.net/v/t39.30808-6/451351985_1636110373599519_6999807592954446378_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHEnB0wP3z2XQbmFIpHuUdDk4iQM_FbD72TiJAz8VsPvfEubuEWDudEOhDmjbC76FsGaWcuvmulcqSxeHQloGSi&_nc_ohc=lQgOyXpjk-IQ7kNvgHm2KJf&_nc_oc=Adjilbc4MmzgJA2aoS7Uez8SVtm0hvFGVWh7d69GfKi5IbDlISKoq-ncP88puticyUE&_nc_zt=23&_nc_ht=scontent.furt3-1.fna&_nc_gid=AhSJRpsGJzWQYGz91GbOPYK&oh=00_AYCtdE37H3bHwTbRFxmpJvt-XnrITlTQVzyrZFstNoVvmw&oe=67AC06EB" alt="Atsadawut" class="w-40 h-40 rounded-full mb-4">
         <h2 class="text-6xl font-semibold">I am Atsadawut</h2>
         <p class="text-lg text-gray-500 mt-4">Programmer | Designer | Data Enthusiast</p>
