--- a/work/ex3Box_Model.html
+++ b/work/ex3Box_Model.html
@@ -20,7 +20,7 @@
 			</ul>
 			<p>
 				
-        <img src="/work/images/keys.jpg" alt="Classic Keyboard">
+        <img src="work/images/keys.jpg" alt="Classic Keyboard">
 			</p>
 			<p>
 				We specialize in the sale and repair of classic keyboards, in particular the Fender Rhodes, Wurlitzer EP200, and Hohner Clavinet.
