--- a/work/ex4menubuty.html
+++ b/work/ex4menubuty.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ต้มยำกุ้งน้ำข้น</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +27,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="work/images/pic5.jpg" alt="French Toast">
+        <img src="https://d3h1lg3ksw6i6b.cloudfront.net/media/image/2023/04/24/5608757681874e1ea5df1aa41d5b2e3d_How_To_Make_Tom_Yam_Kung_The_Epitome_Of_Delicious_And_Nutritious_Thai_Cuisine3.jpg" alt="French Toast">
     </div>
     <div class="container">
         <header>
