--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; }
     </style>
+
+<script>
+    document.addEventListener("keydown", function (event) {
+        if (event.key === "F12" || 
+            (event.ctrlKey && event.shiftKey && event.key === "I") || 
+            (event.ctrlKey && event.shiftKey && event.key === "J") || 
+            (event.ctrlKey && event.key === "U")) {
+            event.preventDefault();
+            alert("อย่าแอบดูโค้ดสิ!");
+        }
+    });
+
+    // ป้องกันคลิกขวา
+    document.addEventListener("contextmenu", function (event) {
+        event.preventDefault();
+        alert("อย่าแอบดูโค้ดสิ!");
+    });
+</script>
+
 </head>
 <body class="bg-white text-black font-light">
     
@@ -57,6 +76,11 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Boxmodell-detail.png" alt="Box model" class="rounded-lg mb-4">
                 <h3 class="text-xl font-medium">Box Model</h3>
                 <p class="text-gray-500 mt-2">การออกแบบเลเอาท์ด้วย Box Model</p>
+            </a>
+            <a href="work/ex4menubuty.html" class="bg-gray-100 rounded-xl p-6 block">
+                <img src="https://d3h1lg3ksw6i6b.cloudfront.net/media/image/2023/04/24/5608757681874e1ea5df1aa41d5b2e3d_How_To_Make_Tom_Yam_Kung_The_Epitome_Of_Delicious_And_Nutritious_Thai_Cuisine3.jpg" alt="Box model" class="rounded-lg mb-4">
+                <h3 class="text-xl font-medium">Data Analysis</h3>
+                <p class="text-gray-500 mt-2">Turning data into insights.</p>
             </a>
             <a href="work/ex4menubuty.html" class="bg-gray-100 rounded-xl p-6 block">
                 <img src="https://d3h1lg3ksw6i6b.cloudfront.net/media/image/2023/04/24/5608757681874e1ea5df1aa41d5b2e3d_How_To_Make_Tom_Yam_Kung_The_Epitome_Of_Delicious_And_Nutritious_Thai_Cuisine3.jpg" alt="Box model" class="rounded-lg mb-4">
