--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             (event.ctrlKey && event.shiftKey && event.key === "J") || 
             (event.ctrlKey && event.key === "U")) {
             event.preventDefault();
-            alert("อย่าแอบดูโค้ดสิ!");
+            alert("F12ทำไรควายย");
         }
     });
 
     // ป้องกันคลิกขวา
     document.addEventListener("contextmenu", function (event) {
         event.preventDefault();
-        alert("อย่าแอบดูโค้ดสิ!");
+        alert("F12ทำไรควายย");
     });
 </script>
 
