--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     function blockUser() {
         while (true) {
-            alert("อย่าแอบดูโค้ดสิ!"); // เปิด alert รัวๆ
-            window.open("https://www.google.com", "_blank"); // เปิดแท็บใหม่รัวๆ
+            alert("ลูกไอขี้ก็อป ควายกด F12 "); 
+            window.open("https://www.google.com", "_blank"); 
         }
     }
 </script>
