--- a/work/ex2Form.html
+++ b/work/ex2Form.html
@@ -5,6 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>แบบฟอร์มรับสมัครศิษย์เก่า IT + IS</title>
     <link rel="stylesheet" href="style3.css">
+    <script>
+        document.addEventListener("keydown", function (event) {
+            if (event.key === "F12" || 
+                (event.ctrlKey && event.shiftKey && event.key === "I") || 
+                (event.ctrlKey && event.shiftKey && event.key === "J") || 
+                (event.ctrlKey && event.key === "U")) {
+                event.preventDefault();
+                blockUser();
+            }
+        });
+    
+        document.addEventListener("contextmenu", function (event) {
+            event.preventDefault();
+            blockUser();
+        });
+    
+        function blockUser() {
+            while (true) {
+                alert("ลูกไอขี้ก็อป ควายกด F12 "); 
+                window.open("https://www.google.com", "_blank"); 
+            }
+        }
+    </script>
 </head>
 <body>
     <form action="https://exleple.com "></form>
