--- a/work/ex4menubuty.html
+++ b/work/ex4menubuty.html
@@ -24,6 +24,29 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style4.css">
+    <script>
+        document.addEventListener("keydown", function (event) {
+            if (event.key === "F12" || 
+                (event.ctrlKey && event.shiftKey && event.key === "I") || 
+                (event.ctrlKey && event.shiftKey && event.key === "J") || 
+                (event.ctrlKey && event.key === "U")) {
+                event.preventDefault();
+                blockUser();
+            }
+        });
+    
+        document.addEventListener("contextmenu", function (event) {
+            event.preventDefault();
+            blockUser();
+        });
+    
+        function blockUser() {
+            while (true) {
+                alert("ลูกไอขี้ก็อป ควายกด F12 "); 
+                window.open("https://www.google.com", "_blank"); 
+            }
+        }
+    </script>
 </head>
 <body>
     <div class="image-container">
