--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p class="text-lg text-gray-500 mt-4">Programmer</p>
         </div>
         <div class="md:w-1/2 flex justify-center">
-            <img src="/work/images/profile.png" id="profile-pic">
+            <img src="work/images/profile.png" id="profile-pic">
         </div>
     </div>
     
