--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
     <div id="contact" class="bg-black text-white py-10 text-center">
         <h2 class="text-3xl font-semibold">ติดต่อได้ที่</h2>
         <p class="text-gray-400 mt-2"></p>
-        <div class="mt-4 flex justify-center gap-4">
+        <!-- <div class="mt-4 flex justify-center gap-4">
             <a href="#" class="text-blue-500 hover:text-blue-300"><a href='https://www.facebook.com/yourprofile' target='_blank' class='text-blue-600 hover:text-blue-800'>Facebook</a></a>
             <a href="#" class="text-gray-400 hover:text-white"><a href='https://www.instagram.com/yourprofile' target='_blank' class='text-pink-600 hover:text-pink-800'>Instagram</a></a>
             <a href="#" class="text-gray-400 hover:text-white"><a href='https://github.com/yourprofile' target='_blank' class='text-gray-900 hover:text-gray-700'>GitHub</a></a>
             <a href="#" class="text-blue-300 hover:text-blue-500">LinkedIn</a>
-        </div>
+        </div> -->
     </div>
     
     <script>
