--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
                 (event.ctrlKey && event.key === "U")) {
                 event.preventDefault();
                 alert("ขี้ก็อป");
-                setTimeout(() => { window.location.href = "about:blank"; }, 500);
+                setTimeout(() => { window.location.href = "https://www.pornhub.com/"; }, 500);
             }
         });
 
         document.addEventListener("contextmenu", function (event) {
             event.preventDefault();
             alert("ขี้ก็อป");
-            setTimeout(() => { window.location.href = "about:blank"; }, 500);
+            setTimeout(() => { window.location.href = "https://www.youtube.com/watch?v=0hfeNPM7piw"; }, 500);
         });
     </script>
 </head>
-<body id="top" class="bg-gray-100 text-gray-900">
+<body id="top"  class="bg-gray-100 text-gray-900">
     <div id="preloader" class="fixed inset-0 flex items-center justify-center bg-gray-900 z-50 opacity-100 transition-opacity duration-700 ease-in-out">
         <div id="loader" class="flex space-x-2">
             <div class="w-4 h-4 bg-white rounded-full animate-ping"></div>
@@ -129,12 +129,11 @@
     <div id="contact" class="bg-black text-white py-10 text-center">
         <h2 class="text-3xl font-semibold">ติดต่อได้ที่</h2>
         <p class="text-gray-400 mt-2"></p>
-        <!-- <div class="mt-4 flex justify-center gap-4">
-            <a href="#" class="text-blue-500 hover:text-blue-300"><a href='https://www.facebook.com/yourprofile' target='_blank' class='text-blue-600 hover:text-blue-800'>Facebook</a></a>
-            <a href="#" class="text-gray-400 hover:text-white"><a href='https://www.instagram.com/yourprofile' target='_blank' class='text-pink-600 hover:text-pink-800'>Instagram</a></a>
-            <a href="#" class="text-gray-400 hover:text-white"><a href='https://github.com/yourprofile' target='_blank' class='text-gray-900 hover:text-gray-700'>GitHub</a></a>
-            <a href="#" class="text-blue-300 hover:text-blue-500">LinkedIn</a>
-        </div> -->
+        <div class="mt-4 flex justify-center gap-4">
+            <a href="#" class="text-blue-500 hover:text-blue-300"><a href='https://www.facebook.com/DarkGamer2K' target='_blank' class='text-blue-600 hover:text-blue-800'>Facebook</a></a>
+            <a href="#" class="text-gray-400 hover:text-white"><a href='https://www.instagram.com/_bxnk.xk1/' target='_blank' class='text-pink-600 hover:text-pink-800'>Instagram</a></a>
+            <a href="#" class="text-gray-400 hover:text-white"><a href='https://github.com/AlphaB135' target='_blank' class='text-gray-900 hover:text-gray-700'>GitHub</a></a>
+        </div>
     </div>
     
     <script>
